[package]
name = "mapgen"
version = "0.5.1"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Map generator for games (dungeons, worlds etc.)"
keywords = ["game", "map", "map-generator"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/mapgen.rs"
homepage = "https://github.com/klangner/mapgen.rs"
documentation = "https://docs.rs/mapgen"
edition = "2018"

[dependencies]
rand = "0.8"
