[package]
name = "mapgen-demo"
version = "0.1.2"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Map generator demo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/mapgen.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mapgen = {path=".."}
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]